Fixed CSS For Tags Page Card Spacing

--- a/react-app/src/components/Tags/TagBigCard.css
+++ b/react-app/src/components/Tags/TagBigCard.css
@@ -6,13 +6,17 @@
   justify-content: center;
   align-items: center;
   cursor: pointer;
+  opacity: .80;
+}
+
+.tagbigcard-container:hover {
+  opacity: 1;
 }
 
 .tagbigcard-pic {
   width: 200px;
   height: 200px;
   object-fit: cover;
-  opacity: .80;
 }
 
 .tagbigcard-text {
