--- a/react-app/src/components/Tags/TagsPage.css
+++ b/react-app/src/components/Tags/TagsPage.css
@@ -57,6 +57,8 @@
   height: 100%;
   min-height: 100vh;
   background-color: #f3f5f6;
+  display: flex;
+  justify-content: center;
 }
 
 .tagspage-container {
@@ -78,7 +80,7 @@
 .tagspage-images-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
   gap: 24px 24px;
   /* width: 1200px; */
   width: 100%;
